--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bot.discord",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
     "beam-client-node": "^1.0.3",
     "discord.js": "^11.3.2",
     "discord.js-commando": "^0.9.0",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "request": "^2.85.0"
   }
 }
